--- a/{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/Resources/UI/q{{cookiecutter.app_name}}AppAboutDialog.ui
+++ b/{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/Resources/UI/q{{cookiecutter.app_name}}AppAboutDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>qAppAboutDialog</class>
- <widget class="QDialog" name="qAppAboutDialog">
+ <class>q{{cookiecutter.app_name}}AppAboutDialog</class>
+ <widget class="QDialog" name="q{{cookiecutter.app_name}}AppAboutDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -21,7 +21,7 @@
     <active>
      <colorrole role="WindowText">
       <brush brushstyle="SolidPattern">
-       <color alpha="255">
+       <color alpha="255">s
         <red>0</red>
         <green>0</green>
         <blue>0</blue>
